--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
     "@fontsource-variable/afacad": "^5.0.3",
+    "@fontsource-variable/montserrat": "^5.0.19",
     "@fontsource-variable/noto-sans-jp": "^5.0.19",
     "@fontsource/zen-kaku-gothic-antique": "^5.0.19",
     "@types/react": "^18.3.3",
@@ -25,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "swiper": "^11.1.4",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
