--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro": "^4.10.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "highcharts": "^11.4.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
