--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,9 +2,9 @@ name: ci-for-pull-request
 on:
   pull_request:
 
-# concurrency:
-#   cancel-in-progress: true
-#   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+concurrency:
+  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
 
 jobs:
   build:
